# serializer version: 1
# name: TestReflector.test_prompt_config_limits_failed_cases
  list([
    list([
      dict({
        'content': '''
          You are an expert Python programmer specializing in knowledge base system design.
          
          Your task: Given a Knowledge Base Program, its evaluation score, and underperforming cases, identify the root cause of each low score and improve the program. Improvements are two-fold: (A) **Prompt Optimization** — tune the four instruction constants (especially ALWAYS_ON_KNOWLEDGE) to steer the task agent's behavior, and (B) **Memory Design** — improve the KnowledgeItem/Query schemas and KnowledgeBase storage/retrieval logic. Both dimensions matter and should be considered together.
          
          <interface_spec>
          You are designing a Knowledge Base Program that implements three classes:
          
          1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
             - Must be a @dataclass with typed fields
             - An external LLM will populate instances by generating JSON matching your field definitions
             - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
             - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
             - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
          
          2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
             - Must be a @dataclass with typed fields
             - An external LLM will populate instances by generating JSON matching your field definitions
             - Same JSON-compatible type restriction and field description support as KnowledgeItem
          
          3. **KnowledgeBase** (class): The core knowledge base system.
             - `__init__(self, toolkit)`: Receives a Toolkit with:
               - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
               - `toolkit.chroma`: chromadb ephemeral client
               - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
               - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
             - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
             - `read(self, query: Query) -> str`: Retrieve relevant information as a string
          
          Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
          
          ## Runtime Constraints
          
          These limits are enforced during evaluation. Violating them results in score = 0.
          
          - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
          - **`write()` / `read()` timeout**: Each call must complete within **60 seconds**. Avoid expensive computation in these methods.
          - **`toolkit.llm_completion()` budget**: At most **1 LLM call per `write()` or `read()` invocation**. The budget resets before each call. Use the single call wisely (e.g., query-focused summarization in `read()`); prefer deterministic retrieval (SQL, text matching) when possible.
          
          ## Instruction Constants (required)
          
          Four module-level string constants provide the natural-language instructions used in task agent prompts:
          
          - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
          - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
          - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
          - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
          
          INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
          
          </interface_spec>
          
          <rules>
          1. Output your diagnosis first, then your changes as a patch using the format below.
          2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
          3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
          4. `read()` must return at most 1000 characters — do not return all stored text.
          5. Keep it simple. Make minimal, targeted fixes.
          6. **Prompt Optimization**: Update INSTRUCTION_* to steer the task LLM's output format. Update ALWAYS_ON_KNOWLEDGE with domain strategies, heuristics, and behavioral rules the task agent should always follow — this constant is injected into EVERY task agent action/decision prompt and is often the highest-leverage change. Study the <model_generation> transcripts in the underperforming cases to identify agent behavioral patterns (e.g., looping, inefficient exploration, wrong object selection) that ALWAYS_ON_KNOWLEDGE can fix.
          7. **Memory Design**: Improve KnowledgeItem/Query field schemas and KnowledgeBase read()/write() logic to store and retrieve more useful information for the task agent.
          8. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
          </rules>
          
          <patch_format>
          Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
          
          Format:
          ```
          *** Begin Patch
          *** Update File: program.py
          @@ <optional context hint>
           context line (1-2 lines before change)
          -removed line
          +added line
           context line (1-2 lines after change)
          *** End Patch
          ```
          
          Rules:
          - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
          - Include 1-2 context lines before and after each change for anchoring.
          - Multiple hunks are allowed within one `*** Update File` block.
          
          Example — replacing a return value:
          ```
          *** Begin Patch
          *** Update File: program.py
          @@ return statement
           def read(self, query: Query) -> str:
          -    return "\n".join(self.store)
          +    return "\n".join(self.store[-5:])
          *** End Patch
          ```
          </patch_format>
          
          <current_program iteration="1">
          ```python
          code here
          ```
          </current_program>
          
          <evaluation_score>0.100</evaluation_score>
          
          
          The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
          
          <underperforming_cases>
          <case id="1">
          <question>Question 2?</question>
          <expected>right_2</expected>
          <model_generation>wrong_2</model_generation>
          <score>0.0</score>
          </case>
          
          <case id="2">
          <question>Question 3?</question>
          <expected>right_3</expected>
          <model_generation>wrong_3</model_generation>
          <score>0.0</score>
          </case>
          
          </underperforming_cases>
          
          <task>
          1. Diagnose why these cases scored low — examine both the retrieval conversation AND the <model_generation> transcript for agent behavioral issues.
          2. Propose improvements along two dimensions:
             (A) **Prompt Optimization**: How should INSTRUCTION_* and ALWAYS_ON_KNOWLEDGE change to steer the task agent better?
             (B) **Memory Design**: How should the schemas or storage/retrieval logic change to provide more useful information?
          3. Output your changes as a patch.
          </task>
        ''',
        'role': 'user',
      }),
    ]),
  ])
# ---
# name: TestReflector.test_reflection_no_code_block_returns_none
  list([
    dict({
      'content': '''
        You are an expert Python programmer specializing in knowledge base system design.
        
        Your task: Given a Knowledge Base Program, its evaluation score, and underperforming cases, identify the root cause of each low score and improve the program. Improvements are two-fold: (A) **Prompt Optimization** — tune the four instruction constants (especially ALWAYS_ON_KNOWLEDGE) to steer the task agent's behavior, and (B) **Memory Design** — improve the KnowledgeItem/Query schemas and KnowledgeBase storage/retrieval logic. Both dimensions matter and should be considered together.
        
        <interface_spec>
        You are designing a Knowledge Base Program that implements three classes:
        
        1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
           - Must be a @dataclass with typed fields
           - An external LLM will populate instances by generating JSON matching your field definitions
           - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
           - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
           - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
        
        2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
           - Must be a @dataclass with typed fields
           - An external LLM will populate instances by generating JSON matching your field definitions
           - Same JSON-compatible type restriction and field description support as KnowledgeItem
        
        3. **KnowledgeBase** (class): The core knowledge base system.
           - `__init__(self, toolkit)`: Receives a Toolkit with:
             - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
             - `toolkit.chroma`: chromadb ephemeral client
             - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
             - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
           - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
           - `read(self, query: Query) -> str`: Retrieve relevant information as a string
        
        Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
        
        ## Runtime Constraints
        
        These limits are enforced during evaluation. Violating them results in score = 0.
        
        - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
        - **`write()` / `read()` timeout**: Each call must complete within **60 seconds**. Avoid expensive computation in these methods.
        - **`toolkit.llm_completion()` budget**: At most **1 LLM call per `write()` or `read()` invocation**. The budget resets before each call. Use the single call wisely (e.g., query-focused summarization in `read()`); prefer deterministic retrieval (SQL, text matching) when possible.
        
        ## Instruction Constants (required)
        
        Four module-level string constants provide the natural-language instructions used in task agent prompts:
        
        - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
        - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
        - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
        - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
        
        INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
        
        </interface_spec>
        
        <rules>
        1. Output your diagnosis first, then your changes as a patch using the format below.
        2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
        3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
        4. `read()` must return at most 1000 characters — do not return all stored text.
        5. Keep it simple. Make minimal, targeted fixes.
        6. **Prompt Optimization**: Update INSTRUCTION_* to steer the task LLM's output format. Update ALWAYS_ON_KNOWLEDGE with domain strategies, heuristics, and behavioral rules the task agent should always follow — this constant is injected into EVERY task agent action/decision prompt and is often the highest-leverage change. Study the <model_generation> transcripts in the underperforming cases to identify agent behavioral patterns (e.g., looping, inefficient exploration, wrong object selection) that ALWAYS_ON_KNOWLEDGE can fix.
        7. **Memory Design**: Improve KnowledgeItem/Query field schemas and KnowledgeBase read()/write() logic to store and retrieve more useful information for the task agent.
        8. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
        </rules>
        
        <patch_format>
        Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
        
        Format:
        ```
        *** Begin Patch
        *** Update File: program.py
        @@ <optional context hint>
         context line (1-2 lines before change)
        -removed line
        +added line
         context line (1-2 lines after change)
        *** End Patch
        ```
        
        Rules:
        - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
        - Include 1-2 context lines before and after each change for anchoring.
        - Multiple hunks are allowed within one `*** Update File` block.
        
        Example — replacing a return value:
        ```
        *** Begin Patch
        *** Update File: program.py
        @@ return statement
         def read(self, query: Query) -> str:
        -    return "\n".join(self.store)
        +    return "\n".join(self.store[-5:])
        *** End Patch
        ```
        </patch_format>
        
        <current_program iteration="1">
        ```python
        x
        ```
        </current_program>
        
        <evaluation_score>0.500</evaluation_score>
        
        
        The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
        
        <underperforming_cases>
        
        </underperforming_cases>
        
        <task>
        1. Diagnose why these cases scored low — examine both the retrieval conversation AND the <model_generation> transcript for agent behavioral issues.
        2. Propose improvements along two dimensions:
           (A) **Prompt Optimization**: How should INSTRUCTION_* and ALWAYS_ON_KNOWLEDGE change to steer the task agent better?
           (B) **Memory Design**: How should the schemas or storage/retrieval logic change to provide more useful information?
        3. Output your changes as a patch.
        </task>
      ''',
      'role': 'user',
    }),
  ])
# ---
# name: TestReflector.test_reflection_passes_failed_cases
  list([
    list([
      dict({
        'content': '''
          You are an expert Python programmer specializing in knowledge base system design.
          
          Your task: Given a Knowledge Base Program, its evaluation score, and underperforming cases, identify the root cause of each low score and improve the program. Improvements are two-fold: (A) **Prompt Optimization** — tune the four instruction constants (especially ALWAYS_ON_KNOWLEDGE) to steer the task agent's behavior, and (B) **Memory Design** — improve the KnowledgeItem/Query schemas and KnowledgeBase storage/retrieval logic. Both dimensions matter and should be considered together.
          
          <interface_spec>
          You are designing a Knowledge Base Program that implements three classes:
          
          1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
             - Must be a @dataclass with typed fields
             - An external LLM will populate instances by generating JSON matching your field definitions
             - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
             - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
             - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
          
          2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
             - Must be a @dataclass with typed fields
             - An external LLM will populate instances by generating JSON matching your field definitions
             - Same JSON-compatible type restriction and field description support as KnowledgeItem
          
          3. **KnowledgeBase** (class): The core knowledge base system.
             - `__init__(self, toolkit)`: Receives a Toolkit with:
               - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
               - `toolkit.chroma`: chromadb ephemeral client
               - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
               - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
             - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
             - `read(self, query: Query) -> str`: Retrieve relevant information as a string
          
          Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
          
          ## Runtime Constraints
          
          These limits are enforced during evaluation. Violating them results in score = 0.
          
          - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
          - **`write()` / `read()` timeout**: Each call must complete within **60 seconds**. Avoid expensive computation in these methods.
          - **`toolkit.llm_completion()` budget**: At most **1 LLM call per `write()` or `read()` invocation**. The budget resets before each call. Use the single call wisely (e.g., query-focused summarization in `read()`); prefer deterministic retrieval (SQL, text matching) when possible.
          
          ## Instruction Constants (required)
          
          Four module-level string constants provide the natural-language instructions used in task agent prompts:
          
          - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
          - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
          - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
          - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
          
          INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
          
          </interface_spec>
          
          <rules>
          1. Output your diagnosis first, then your changes as a patch using the format below.
          2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
          3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
          4. `read()` must return at most 1000 characters — do not return all stored text.
          5. Keep it simple. Make minimal, targeted fixes.
          6. **Prompt Optimization**: Update INSTRUCTION_* to steer the task LLM's output format. Update ALWAYS_ON_KNOWLEDGE with domain strategies, heuristics, and behavioral rules the task agent should always follow — this constant is injected into EVERY task agent action/decision prompt and is often the highest-leverage change. Study the <model_generation> transcripts in the underperforming cases to identify agent behavioral patterns (e.g., looping, inefficient exploration, wrong object selection) that ALWAYS_ON_KNOWLEDGE can fix.
          7. **Memory Design**: Improve KnowledgeItem/Query field schemas and KnowledgeBase read()/write() logic to store and retrieve more useful information for the task agent.
          8. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
          </rules>
          
          <patch_format>
          Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
          
          Format:
          ```
          *** Begin Patch
          *** Update File: program.py
          @@ <optional context hint>
           context line (1-2 lines before change)
          -removed line
          +added line
           context line (1-2 lines after change)
          *** End Patch
          ```
          
          Rules:
          - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
          - Include 1-2 context lines before and after each change for anchoring.
          - Multiple hunks are allowed within one `*** Update File` block.
          
          Example — replacing a return value:
          ```
          *** Begin Patch
          *** Update File: program.py
          @@ return statement
           def read(self, query: Query) -> str:
          -    return "\n".join(self.store)
          +    return "\n".join(self.store[-5:])
          *** End Patch
          ```
          </patch_format>
          
          <current_program iteration="5">
          ```python
          code here
          ```
          </current_program>
          
          <evaluation_score>0.200</evaluation_score>
          
          
          The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
          
          <underperforming_cases>
          <case id="1">
          <question>What is X?</question>
          <expected>42</expected>
          <model_generation>unknown</model_generation>
          <score>0.0</score>
          </case>
          
          </underperforming_cases>
          
          <task>
          1. Diagnose why these cases scored low — examine both the retrieval conversation AND the <model_generation> transcript for agent behavioral issues.
          2. Propose improvements along two dimensions:
             (A) **Prompt Optimization**: How should INSTRUCTION_* and ALWAYS_ON_KNOWLEDGE change to steer the task agent better?
             (B) **Memory Design**: How should the schemas or storage/retrieval logic change to provide more useful information?
          3. Output your changes as a patch.
          </task>
        ''',
        'role': 'user',
      }),
    ]),
  ])
# ---
# name: TestReflector.test_reflection_passes_success_cases
  list([
    list([
      dict({
        'content': '''
          You are an expert Python programmer specializing in knowledge base system design.
          
          Your task: Given a Knowledge Base Program, its evaluation score, and underperforming cases, identify the root cause of each low score and improve the program. Improvements are two-fold: (A) **Prompt Optimization** — tune the four instruction constants (especially ALWAYS_ON_KNOWLEDGE) to steer the task agent's behavior, and (B) **Memory Design** — improve the KnowledgeItem/Query schemas and KnowledgeBase storage/retrieval logic. Both dimensions matter and should be considered together.
          
          <interface_spec>
          You are designing a Knowledge Base Program that implements three classes:
          
          1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
             - Must be a @dataclass with typed fields
             - An external LLM will populate instances by generating JSON matching your field definitions
             - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
             - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
             - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
          
          2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
             - Must be a @dataclass with typed fields
             - An external LLM will populate instances by generating JSON matching your field definitions
             - Same JSON-compatible type restriction and field description support as KnowledgeItem
          
          3. **KnowledgeBase** (class): The core knowledge base system.
             - `__init__(self, toolkit)`: Receives a Toolkit with:
               - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
               - `toolkit.chroma`: chromadb ephemeral client
               - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
               - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
             - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
             - `read(self, query: Query) -> str`: Retrieve relevant information as a string
          
          Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
          
          ## Runtime Constraints
          
          These limits are enforced during evaluation. Violating them results in score = 0.
          
          - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
          - **`write()` / `read()` timeout**: Each call must complete within **60 seconds**. Avoid expensive computation in these methods.
          - **`toolkit.llm_completion()` budget**: At most **1 LLM call per `write()` or `read()` invocation**. The budget resets before each call. Use the single call wisely (e.g., query-focused summarization in `read()`); prefer deterministic retrieval (SQL, text matching) when possible.
          
          ## Instruction Constants (required)
          
          Four module-level string constants provide the natural-language instructions used in task agent prompts:
          
          - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
          - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
          - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
          - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
          
          INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
          
          </interface_spec>
          
          <rules>
          1. Output your diagnosis first, then your changes as a patch using the format below.
          2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
          3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
          4. `read()` must return at most 1000 characters — do not return all stored text.
          5. Keep it simple. Make minimal, targeted fixes.
          6. **Prompt Optimization**: Update INSTRUCTION_* to steer the task LLM's output format. Update ALWAYS_ON_KNOWLEDGE with domain strategies, heuristics, and behavioral rules the task agent should always follow — this constant is injected into EVERY task agent action/decision prompt and is often the highest-leverage change. Study the <model_generation> transcripts in the underperforming cases to identify agent behavioral patterns (e.g., looping, inefficient exploration, wrong object selection) that ALWAYS_ON_KNOWLEDGE can fix.
          7. **Memory Design**: Improve KnowledgeItem/Query field schemas and KnowledgeBase read()/write() logic to store and retrieve more useful information for the task agent.
          8. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
          </rules>
          
          <patch_format>
          Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
          
          Format:
          ```
          *** Begin Patch
          *** Update File: program.py
          @@ <optional context hint>
           context line (1-2 lines before change)
          -removed line
          +added line
           context line (1-2 lines after change)
          *** End Patch
          ```
          
          Rules:
          - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
          - Include 1-2 context lines before and after each change for anchoring.
          - Multiple hunks are allowed within one `*** Update File` block.
          
          Example — replacing a return value:
          ```
          *** Begin Patch
          *** Update File: program.py
          @@ return statement
           def read(self, query: Query) -> str:
          -    return "\n".join(self.store)
          +    return "\n".join(self.store[-5:])
          *** End Patch
          ```
          </patch_format>
          
          <current_program iteration="3">
          ```python
          code here
          ```
          </current_program>
          
          <evaluation_score>0.500</evaluation_score>
          
          The following case(s) show successful performance — the current program handled these correctly. Preserve the behavior that makes these work.
          
          <success_cases>
          <case id="1">
          <question>What is Y?</question>
          <expected>7</expected>
          <model_generation>7</model_generation>
          <score>1.0</score>
          <conversation>
            [user]: query for Y
            [assistant]: 7
          </conversation>
          </case>
          </success_cases>
          
          
          The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
          
          <underperforming_cases>
          <case id="1">
          <question>What is X?</question>
          <expected>42</expected>
          <model_generation>unknown</model_generation>
          <score>0.0</score>
          </case>
          
          </underperforming_cases>
          
          <task>
          1. Diagnose why these cases scored low — examine both the retrieval conversation AND the <model_generation> transcript for agent behavioral issues.
          2. Propose improvements along two dimensions:
             (A) **Prompt Optimization**: How should INSTRUCTION_* and ALWAYS_ON_KNOWLEDGE change to steer the task agent better?
             (B) **Memory Design**: How should the schemas or storage/retrieval logic change to provide more useful information?
          3. Output your changes as a patch.
          </task>
        ''',
        'role': 'user',
      }),
    ]),
  ])
# ---
# name: TestReflector.test_reflection_uses_configured_model
  list([
    list([
      dict({
        'content': '''
          You are an expert Python programmer specializing in knowledge base system design.
          
          Your task: Given a Knowledge Base Program, its evaluation score, and underperforming cases, identify the root cause of each low score and improve the program. Improvements are two-fold: (A) **Prompt Optimization** — tune the four instruction constants (especially ALWAYS_ON_KNOWLEDGE) to steer the task agent's behavior, and (B) **Memory Design** — improve the KnowledgeItem/Query schemas and KnowledgeBase storage/retrieval logic. Both dimensions matter and should be considered together.
          
          <interface_spec>
          You are designing a Knowledge Base Program that implements three classes:
          
          1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
             - Must be a @dataclass with typed fields
             - An external LLM will populate instances by generating JSON matching your field definitions
             - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
             - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
             - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
          
          2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
             - Must be a @dataclass with typed fields
             - An external LLM will populate instances by generating JSON matching your field definitions
             - Same JSON-compatible type restriction and field description support as KnowledgeItem
          
          3. **KnowledgeBase** (class): The core knowledge base system.
             - `__init__(self, toolkit)`: Receives a Toolkit with:
               - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
               - `toolkit.chroma`: chromadb ephemeral client
               - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
               - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
             - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
             - `read(self, query: Query) -> str`: Retrieve relevant information as a string
          
          Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
          
          ## Runtime Constraints
          
          These limits are enforced during evaluation. Violating them results in score = 0.
          
          - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
          - **`write()` / `read()` timeout**: Each call must complete within **60 seconds**. Avoid expensive computation in these methods.
          - **`toolkit.llm_completion()` budget**: At most **1 LLM call per `write()` or `read()` invocation**. The budget resets before each call. Use the single call wisely (e.g., query-focused summarization in `read()`); prefer deterministic retrieval (SQL, text matching) when possible.
          
          ## Instruction Constants (required)
          
          Four module-level string constants provide the natural-language instructions used in task agent prompts:
          
          - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
          - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
          - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
          - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
          
          INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
          
          </interface_spec>
          
          <rules>
          1. Output your diagnosis first, then your changes as a patch using the format below.
          2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
          3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
          4. `read()` must return at most 1000 characters — do not return all stored text.
          5. Keep it simple. Make minimal, targeted fixes.
          6. **Prompt Optimization**: Update INSTRUCTION_* to steer the task LLM's output format. Update ALWAYS_ON_KNOWLEDGE with domain strategies, heuristics, and behavioral rules the task agent should always follow — this constant is injected into EVERY task agent action/decision prompt and is often the highest-leverage change. Study the <model_generation> transcripts in the underperforming cases to identify agent behavioral patterns (e.g., looping, inefficient exploration, wrong object selection) that ALWAYS_ON_KNOWLEDGE can fix.
          7. **Memory Design**: Improve KnowledgeItem/Query field schemas and KnowledgeBase read()/write() logic to store and retrieve more useful information for the task agent.
          8. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
          </rules>
          
          <patch_format>
          Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
          
          Format:
          ```
          *** Begin Patch
          *** Update File: program.py
          @@ <optional context hint>
           context line (1-2 lines before change)
          -removed line
          +added line
           context line (1-2 lines after change)
          *** End Patch
          ```
          
          Rules:
          - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
          - Include 1-2 context lines before and after each change for anchoring.
          - Multiple hunks are allowed within one `*** Update File` block.
          
          Example — replacing a return value:
          ```
          *** Begin Patch
          *** Update File: program.py
          @@ return statement
           def read(self, query: Query) -> str:
          -    return "\n".join(self.store)
          +    return "\n".join(self.store[-5:])
          *** End Patch
          ```
          </patch_format>
          
          <current_program iteration="1">
          ```python
          x
          ```
          </current_program>
          
          <evaluation_score>0.000</evaluation_score>
          
          
          The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
          
          <underperforming_cases>
          
          </underperforming_cases>
          
          <task>
          1. Diagnose why these cases scored low — examine both the retrieval conversation AND the <model_generation> transcript for agent behavioral issues.
          2. Propose improvements along two dimensions:
             (A) **Prompt Optimization**: How should INSTRUCTION_* and ALWAYS_ON_KNOWLEDGE change to steer the task agent better?
             (B) **Memory Design**: How should the schemas or storage/retrieval logic change to provide more useful information?
          3. Output your changes as a patch.
          </task>
        ''',
        'role': 'user',
      }),
    ]),
  ])
# ---
# name: TestReflector.test_successful_reflection
  list([
    dict({
      'content': '''
        You are an expert Python programmer specializing in knowledge base system design.
        
        Your task: Given a Knowledge Base Program, its evaluation score, and underperforming cases, identify the root cause of each low score and improve the program. Improvements are two-fold: (A) **Prompt Optimization** — tune the four instruction constants (especially ALWAYS_ON_KNOWLEDGE) to steer the task agent's behavior, and (B) **Memory Design** — improve the KnowledgeItem/Query schemas and KnowledgeBase storage/retrieval logic. Both dimensions matter and should be considered together.
        
        <interface_spec>
        You are designing a Knowledge Base Program that implements three classes:
        
        1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
           - Must be a @dataclass with typed fields
           - An external LLM will populate instances by generating JSON matching your field definitions
           - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
           - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
           - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
        
        2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
           - Must be a @dataclass with typed fields
           - An external LLM will populate instances by generating JSON matching your field definitions
           - Same JSON-compatible type restriction and field description support as KnowledgeItem
        
        3. **KnowledgeBase** (class): The core knowledge base system.
           - `__init__(self, toolkit)`: Receives a Toolkit with:
             - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
             - `toolkit.chroma`: chromadb ephemeral client
             - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
             - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
           - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
           - `read(self, query: Query) -> str`: Retrieve relevant information as a string
        
        Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
        
        ## Runtime Constraints
        
        These limits are enforced during evaluation. Violating them results in score = 0.
        
        - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
        - **`write()` / `read()` timeout**: Each call must complete within **60 seconds**. Avoid expensive computation in these methods.
        - **`toolkit.llm_completion()` budget**: At most **1 LLM call per `write()` or `read()` invocation**. The budget resets before each call. Use the single call wisely (e.g., query-focused summarization in `read()`); prefer deterministic retrieval (SQL, text matching) when possible.
        
        ## Instruction Constants (required)
        
        Four module-level string constants provide the natural-language instructions used in task agent prompts:
        
        - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
        - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
        - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
        - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
        
        INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
        
        </interface_spec>
        
        <rules>
        1. Output your diagnosis first, then your changes as a patch using the format below.
        2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
        3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
        4. `read()` must return at most 1000 characters — do not return all stored text.
        5. Keep it simple. Make minimal, targeted fixes.
        6. **Prompt Optimization**: Update INSTRUCTION_* to steer the task LLM's output format. Update ALWAYS_ON_KNOWLEDGE with domain strategies, heuristics, and behavioral rules the task agent should always follow — this constant is injected into EVERY task agent action/decision prompt and is often the highest-leverage change. Study the <model_generation> transcripts in the underperforming cases to identify agent behavioral patterns (e.g., looping, inefficient exploration, wrong object selection) that ALWAYS_ON_KNOWLEDGE can fix.
        7. **Memory Design**: Improve KnowledgeItem/Query field schemas and KnowledgeBase read()/write() logic to store and retrieve more useful information for the task agent.
        8. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
        </rules>
        
        <patch_format>
        Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
        
        Format:
        ```
        *** Begin Patch
        *** Update File: program.py
        @@ <optional context hint>
         context line (1-2 lines before change)
        -removed line
        +added line
         context line (1-2 lines after change)
        *** End Patch
        ```
        
        Rules:
        - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
        - Include 1-2 context lines before and after each change for anchoring.
        - Multiple hunks are allowed within one `*** Update File` block.
        
        Example — replacing a return value:
        ```
        *** Begin Patch
        *** Update File: program.py
        @@ return statement
         def read(self, query: Query) -> str:
        -    return "\n".join(self.store)
        +    return "\n".join(self.store[-5:])
        *** End Patch
        ```
        </patch_format>
        
        <current_program iteration="3">
        ```python
        old code
        ```
        </current_program>
        
        <evaluation_score>0.300</evaluation_score>
        
        
        The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
        
        <underperforming_cases>
        <case id="1">
        <question>q</question>
        <expected>right</expected>
        <model_generation>wrong</model_generation>
        <score>0.0</score>
        </case>
        
        </underperforming_cases>
        
        <task>
        1. Diagnose why these cases scored low — examine both the retrieval conversation AND the <model_generation> transcript for agent behavioral issues.
        2. Propose improvements along two dimensions:
           (A) **Prompt Optimization**: How should INSTRUCTION_* and ALWAYS_ON_KNOWLEDGE change to steer the task agent better?
           (B) **Memory Design**: How should the schemas or storage/retrieval logic change to provide more useful information?
        3. Output your changes as a patch.
        </task>
      ''',
      'role': 'user',
    }),
  ])
# ---
